sane benchmarks again

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
         run: go build -v .
 
       - name: Benchmark
-        run: go test -v -run="$^" -bench="." -benchmem -count="1" -cpu="1,2,4,8,16,32,64,128,256,512,1024" ./...
+        run: go test -v -run="$^" -bench="." -benchmem -count="3" ./...
 
       - name: Test
         run: go test -v ./...
