--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,8 +44,24 @@ jobs:
         run: |
           go mod download
 
-      - name: Benchmark
-        run: go test -v -run="$^" -bench="." -benchmem -count="3" ./...
-
       - name: Test
         run: go test -v ./...
+  benchmark:
+    name: Benchmark
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.14
+        id: go
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
+      - name: Get dependencies
+        run: |
+          go mod download
+
+      - name: Benchmark
+        run: go test -v -run="$^" -bench="." -benchmem -count="3" ./...
